# AnkerMake-Slicer

./: ._readme.md  readme.md
CuraEngine/: CMakeLists.txt  CPackConfig.cmake  Changelog.md  Cura.proto  CuraEngine.aps  CuraEngine.rc  Doxyfile  Jenkinsfile  README.md  clang-format  dbgcrash.cpp  dbgcrash.h  main.cpp  resource.h
CuraEngine/cmake/: Boost.cmake  CXX.cmake  ConfigureAllModules.cmake  ConfigureProperty.cmake  ConfigureTarget.cmake  Dependency.cmake  FileUtil.cmake  FindGMock.cmake  FindPolyclipping.cmake  FindStb.cmake  FindUtil.cmake  TestLibCL.cmake  cc.cmake  cpack_config_deb_mingw64.cmake  cpack_config_zip_mingw64.cmake  lib.cmake  openmp.cmake
CuraEngine/cmake/cc/: Find_CC_Gmp.cmake  Find_CC_Mpfr.cmake
CuraEngine/cmake/ccglobal/: container.h  export.h  log.h  spycc.h  tracer.h
CuraEngine/cmake/ccglobal/serial/: serial.h  serialdrill.h  serialtrimesh.h
CuraEngine/cmake/collect/: CollectSource.cmake
CuraEngine/cmake/source/: __vld.cpp  leak.h
CuraEngine/docker/: build-mingw64.sh  build.sh  publish-packages.sh
CuraEngine/docs/: concepts.md  gcode_export.md  generating_paths.md  glossary.md  inserts.md  mainpage.md  pipeline.md  scene.md  settings.md
CuraEngine/libs/: DO_NOT_CHANGE_THESE
CuraEngine/libs/boost/: CMakeLists.txt
CuraEngine/libs/boost/boost/: rational.hpp  static_string.hpp
CuraEngine/libs/boost/libs/: CMakeLists.txt
CuraEngine/libs/clipper/: CMakeLists.txt  clipper.cpp
CuraEngine/libs/clipperz/: CMakeLists.txt
CuraEngine/libs/clipperz/clipper3r/: clipper.cpp  clipper.hpp
CuraEngine/libs/expolygon/: CMakeLists.txt  ClipperUtils.cpp  ClipperUtils.hpp  ExPolygon.hpp  Polygon.cpp  Polygon.hpp  Polyline.cpp  Polyline.hpp  libslic3r.h
CuraEngine/libs/libnest2d/: CMakeLists.txt
CuraEngine/libs/libnest2d/tools/: benchmark.h
CuraEngine/libs/libslic3r/: CMakeLists.txt
CuraEngine/libs/libslic3r/libslic3r/: AABBTreeIndirect.hpp  AppConfig.cpp  BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  ClipperUtils.cpp  ClipperUtils.hpp  ElephantFootCompensation.cpp  ExPolygon.cpp  ExPolygon.hpp  ExtrusionSimulator.cpp  Flow.cpp  GCode.cpp  Geometry.cpp  Geometry.hpp  Layer.cpp  LayerRegion.cpp  Line.cpp  MinAreaBoundingBox.cpp  Model.cpp  MultiPoint.cpp  PNGReadWrite.cpp  PerimeterGenerator.cpp  Platform.cpp  Polygon.cpp  Preset.cpp  PresetBundle.cpp  Print.cpp  PrintConfig.cpp  PrintObject.cpp  SLAPrint.cpp  SLAPrintSteps.cpp  SVG.cpp  SVG.hpp  ShortestPath.cpp  ShortestPath.hpp  SlicingAdaptive.cpp  SupportMaterial.cpp  TriangleMesh.cpp  TriangleMesh.hpp  (+5 more)
CuraEngine/libs/libslic3r/slic3rWrapper/: CMakeLists.txt
CuraEngine/libs/nlopt/: CMakeLists.txt
CuraEngine/libs/qhull/: CMakeLists.txt
CuraEngine/libs/rapidjson/: license.txt
CuraEngine/libs/rapidjson/error/: error.h
CuraEngine/libs/rapidjson/internal/: biginteger.h  diyfp.h  ieee754.h  strtod.h
CuraEngine/libs/stb/: .travis.yml  README.md
CuraEngine/libs/stb/deprecated/: rrsprintf.h  stb.h  stb_image.c  stretch_test.c  stretchy_buffer.h
CuraEngine/libs/stb/docs/: stb_howto.txt  stb_voxel_render_interview.md  why_public_domain.md
CuraEngine/libs/stb/tests/: Makefile  c_lexer_test.c  c_lexer_test.dsp  fuzz_main.c  grid_reachability.c  herringbone.dsp  herringbone_map.c  (+39 more)
CuraEngine/libs/tbb/: CMakeLists.txt
CuraEngine/meta/: 15.04_to_2.0.txt  HOWTO.txt  new settings master
CuraEngine/src/: Application.cpp  Application.h  CMakeLists.txt  ConicalOverhang.cpp  ConicalOverhang.h  ExtruderTrain.cpp  ExtruderTrain.h  FanSpeedLayerTime.h  FffGcodeWriter.cpp  FffGcodeWriter.h  FffPolygonGenerator.cpp  FffPolygonGenerator.h  FffProcessor.cpp  FffProcessor.h  GCodePathConfig.cpp  GCodePathConfig.h  GcodeLayerThreader.h  InsetOrderOptimizer.cpp  InsetOrderOptimizer.h  LayerPlan.cpp  LayerPlan.h  LayerPlanBuffer.cpp  LayerPlanBuffer.h  MergeInfillLines.cpp  MergeInfillLines.h  MeshGroup.cpp  MeshGroup.h  Mold.cpp  Mold.h  PathOrder.cpp  PathOrder.h  PathOrderMonotonic.h  Preheat.cpp  Preheat.h  PrimeTower.cpp  PrimeTower.h  PrintFeature.h  RetractionConfig.h  Scene.cpp  Scene.h  (+48 more)
CuraEngine/src/AnkerGcode/: gcodeExportOptimize_CL.cpp  gcodeExportOptimize_CL.h  gcodeExport_CL.cpp
CuraEngine/src/communication/: ArcusCommunication.cpp  ArcusCommunication.h  ArcusCommunicationPrivate.cpp  ArcusCommunicationPrivate.h  CommandLine.cpp  CommandLine.h  Communication.h  Listener.cpp  Listener.h  SliceDataStruct.h
CuraEngine/src/infill/: DensityProvider.h  GyroidInfill.cpp  GyroidInfill.h  ImageBasedDensityProvider.cpp  ImageBasedDensityProvider.h  NoZigZagConnectorProcessor.cpp  NoZigZagConnectorProcessor.h  SierpinskiFill.cpp  SierpinskiFill.h  SierpinskiFillProvider.cpp  SierpinskiFillProvider.h  SubDivCube.cpp  SubDivCube.h  UniformDensityProvider.h  ZigzagConnectorProcessor.cpp  ZigzagConnectorProcessor.h
CuraEngine/src/pathPlanning/: Comb.cpp  Comb.h  CombPath.h  CombPaths.h  GCodePath.cpp  GCodePath.h  LinePolygonsCrossings.cpp  LinePolygonsCrossings.h  NozzleTempInsert.cpp  NozzleTempInsert.h  TimeMaterialEstimates.cpp  TimeMaterialEstimates.h
CuraEngine/src/progress/: Progress.cpp  Progress.h  ProgressEstimator.h  ProgressEstimatorLinear.h  ProgressStageEstimator.cpp  ProgressStageEstimator.h
CuraEngine/src/settings/: AdaptiveLayerHeights.cpp  AdaptiveLayerHeights.h  EnumSettings.h  FlowTempGraph.cpp  FlowTempGraph.h  PathConfigStorage.cpp  PathConfigStorage.h  Settings.cpp  Settings.h  ZSeamConfig.cpp  ZSeamConfig.h
CuraEngine/src/utils/: AABB.cpp  AABB.h  AABB3D.cpp  AABB3D.h  Coord_t.h  Date.cpp  Date.h  DecodeUtils.hpp  FMatrix4x3.cpp  FMatrix4x3.h  IntPoint.h  LazyInitialization.h  LinearAlg2D.cpp  ListPolyIt.cpp  ListPolyIt.h  Lock.h  MinimumSpanningTree.cpp  MinimumSpanningTree.h  NoCopy.h  Point3.cpp  Point3.h  PolygonConnector.cpp  PolygonConnector.h  PolygonProximityLinker.cpp  PolygonProximityLinker.h  PolygonsPointIndex.cpp  PolygonsPointIndex.h  ProximityPointLink.cpp  ProximityPointLink.h  SVG.cpp  SVG.h  SparseGrid.h  SparseLineGrid.h  SparsePointGrid.h  SparsePointGridInclusive.h  SymmetricPair.h  UnionFind.h  algorithm.h  getpath.cpp  getpath.h  (+13 more)
(+1842 files in other folders)
